Se añadieron métodos para manejar los JSON. (No terminado)